--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
